--- a/1_DecisionTree.ipynb
+++ b/1_DecisionTree.ipynb
@@ -28,8 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dataset = pd.read_csv('D:/Code/Python/NCKH/A1/c.csv')\n",
-    "dataset = pd.read_csv('./Dataset/para.csv')\n",
+    "dataset = pd.read_csv('./Dataset/dataset.csv')\n",
     "# \n",
     "features = [\"Freq\"]\n",
     "targets = [\"W\", \"L\", \"Lf\"]\n",
