--- a/4_Random_Forest.ipynb
+++ b/4_Random_Forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +75,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mcr\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\skopt\\optimizer\\optimizer.py:517: UserWarning: The objective has been evaluated at point [100, 2] before, using random point [90, 88]\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\mcr\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\skopt\\optimizer\\optimizer.py:517: UserWarning: The objective has been evaluated at point [100, 2] before, using random point [21, 80]\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\mcr\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\skopt\\optimizer\\optimizer.py:517: UserWarning: The objective has been evaluated at point [60, 10] before, using random point [5, 93]\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "result = gp_minimize(evaluate_model, search_space)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -494,13 +507,13 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor(max_depth=53, min_samples_split=9)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;RandomForestRegressor<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.ensemble.RandomForestRegressor.html\">?<span>Documentation for RandomForestRegressor</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestRegressor(max_depth=53, min_samples_split=9)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor(max_depth=68, min_samples_split=8)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;RandomForestRegressor<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.ensemble.RandomForestRegressor.html\">?<span>Documentation for RandomForestRegressor</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestRegressor(max_depth=68, min_samples_split=8)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "RandomForestRegressor(max_depth=53, min_samples_split=9)"
+       "RandomForestRegressor(max_depth=68, min_samples_split=8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +540,7 @@
     }
    ],
    "source": [
-    "new_dataset = pd.read_csv('./Dataset/Loc_S11_20.csv')  \n",
+    "new_dataset = pd.read_csv('./Dataset/dataset.csv')  \n",
     "new_data = new_dataset[\"Freq\"].values.reshape(-1, 1)  \n",
     "# Scaling \n",
     "new_data_scaled = scaler.transform(new_data)\n",
@@ -537,22 +550,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Accuracy: -0.215\n",
-      "Best Parameters: max_depth=53, min_samples_split=9\n",
-      "Predictions: [[22.00023285 18.87506062 18.83045038  5.39970843  6.36249203  3.11123272]\n",
-      " [77.90735068 41.7635275  13.3872      4.91463     6.08846     3.11      ]\n",
-      " [64.95894242 37.5769976  13.36468764  5.65398296  5.96349344  3.11      ]\n",
+      "Best Accuracy: -0.250\n",
+      "Best Parameters: max_depth=68, min_samples_split=8\n",
+      "Predictions: [[22.0159702  18.87474364 18.83432254  5.39616579  6.36220292  3.1105986 ]\n",
+      " [77.88154493 41.67453627 13.3872      4.91463     6.08846     3.11      ]\n",
+      " [64.99737328 37.50751787 13.36485975  5.6541818   5.96588515  3.11      ]\n",
       " ...\n",
-      " [30.27733828 21.89521805 18.83144381  5.00568474  6.36877998  3.11      ]\n",
-      " [13.19703654 12.2953564  18.458       3.86766     3.81221     2.92395   ]\n",
-      " [57.93509796 33.69447011 13.3067065   5.3966828   4.9866901   3.11      ]]\n"
+      " [30.39792948 21.93560909 18.83131106  5.00002952  6.368835    3.11      ]\n",
+      " [13.19789358 12.29206154 18.458       3.86766     3.81221     2.92395   ]\n",
+      " [57.97346001 33.65042102 13.30688     5.398656    4.986692    3.11      ]]\n"
      ]
     }
    ],
@@ -564,20 +577,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Giá trị dự đoán: [[22.00023285 18.87506062 18.83045038  5.39970843  6.36249203  3.11123272]\n",
-      " [77.90735068 41.7635275  13.3872      4.91463     6.08846     3.11      ]\n",
-      " [64.95894242 37.5769976  13.36468764  5.65398296  5.96349344  3.11      ]\n",
+      "Giá trị dự đoán: [[22.0159702  18.87474364 18.83432254  5.39616579  6.36220292  3.1105986 ]\n",
+      " [77.88154493 41.67453627 13.3872      4.91463     6.08846     3.11      ]\n",
+      " [64.99737328 37.50751787 13.36485975  5.6541818   5.96588515  3.11      ]\n",
       " ...\n",
-      " [30.27733828 21.89521805 18.83144381  5.00568474  6.36877998  3.11      ]\n",
-      " [13.19703654 12.2953564  18.458       3.86766     3.81221     2.92395   ]\n",
-      " [57.93509796 33.69447011 13.3067065   5.3966828   4.9866901   3.11      ]]\n"
+      " [30.39792948 21.93560909 18.83131106  5.00002952  6.368835    3.11      ]\n",
+      " [13.19789358 12.29206154 18.458       3.86766     3.81221     2.92395   ]\n",
+      " [57.97346001 33.65042102 13.30688     5.398656    4.986692    3.11      ]]\n"
      ]
     }
    ],
@@ -613,15 +626,15 @@
      "output_type": "stream",
      "text": [
       "                                             Metric  Gausians\n",
-      "0                         Mean Absolute Error (MAE)  0.001918\n",
-      "1                          Mean Squared Error (MSE)  0.000035\n",
-      "2                    Root Mean Squared Error (RMSE)  0.005906\n",
-      "3                                          R² Score  0.994343\n",
-      "4                          Explained Variance Score  0.994361\n",
-      "5                             Median Absolute Error  0.000625\n",
-      "6                         Mean Bias Deviation (MBD) -0.000107\n",
-      "7             Mean Absolute Percentage Error (MAPE)  0.924554\n",
-      "8  Symmetric Mean Absolute Percentage Error (sMAPE)  0.881608\n"
+      "0                         Mean Absolute Error (MAE)  0.001825\n",
+      "1                          Mean Squared Error (MSE)  0.000033\n",
+      "2                    Root Mean Squared Error (RMSE)  0.005710\n",
+      "3                                          R² Score  0.994883\n",
+      "4                          Explained Variance Score  0.994899\n",
+      "5                             Median Absolute Error  0.000603\n",
+      "6                         Mean Bias Deviation (MBD) -0.000093\n",
+      "7             Mean Absolute Percentage Error (MAPE)  0.848614\n",
+      "8  Symmetric Mean Absolute Percentage Error (sMAPE)  0.813753\n"
      ]
     }
    ],
