--- a/3_Linear_Regression.ipynb
+++ b/3_Linear_Regression.ipynb
@@ -56,11 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_space = [Categorical(categories=[True, False], name='fit_intercept')]"
+    "search_space = [Categorical(categories=[True, False], name='fit_intercept')]\n",
+    "# search_space = [\n",
+    "#     Categorical([True, False], name=\"fit_intercept\"),\n",
+    "#     Categorical([True, False], name=\"copy_X\"),\n",
+    "#     Categorical([\"auto\", \"svd\", \"cholesky\", \"lsqr\", \"sag\", \"saga\"], name=\"solver\"),\n",
+    "#     Categorical([True, False], name=\"positive\"),\n",
+    "# ]"
    ]
   },
   {
