--- a/4_Random_Forest.ipynb
+++ b/4_Random_Forest.ipynb
@@ -11,7 +11,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from skopt import gp_minimize\n",
-    "from skopt.space import Integer\n",
+    "from skopt.space import Integer, Categorical\n",
     "from numpy import mean\n",
     "from skopt.utils import use_named_args\n",
     "import numpy as np\n",
@@ -51,11 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_space = [Integer(1, 100, name='max_depth'), Integer(2, 100, name='min_samples_split')]"
+    "# search_space = [Integer(1, 100, name='max_depth'), Integer(2, 100, name='min_samples_split')]\n",
+    "search_space = {\n",
+    "    \"n_estimators\": Integer(50, 400),\n",
+    "    \"max_depth\": Integer(2, 25),\n",
+    "    \"min_samples_split\": Integer(2, 20),\n",
+    "    \"min_samples_leaf\": Integer(1, 10),\n",
+    "    \"max_features\": Categorical([\"auto\", \"sqrt\", \"log2\"]),\n",
+    "    \"bootstrap\": Categorical([True, False]),\n",
+    "    \"criterion\": Categorical([\"squared_error\", \"absolute_error\"]),\n",
+    "}\n",
+    "\n",
+    "candidate_param_names = list(search_space.keys())\n",
+    "# Giới hạn kích thước tổ hợp để tránh bùng nổ tổ hợp\n",
+    "MIN_SUBSET_SIZE = 1\n",
+    "MAX_SUBSET_SIZE = 7   # ví dụ: chỉ xét tổ hợp 1–3 tham số"
    ]
   },
   {
